--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -14,6 +14,8 @@ span.glyphicon-link {
 	z-index: 10 !important;
 }
 
+.ui-datepicker-div { z-index: 999; }
+
 .ui-datepicker-month, .ui-datepicker-year{
 	color:black;
 }
